Fix spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -30,7 +30,7 @@
 .puzzle {
     display: flex;
     min-height: 100vh;
-    justify-content: flex-start; /* will change dynamically */
+    justify-content: space-between;
     flex-direction: column;
     align-items: center;
     max-width: 100vw;
@@ -133,12 +133,16 @@
 }
 
 .hintButtonBase {
+    display: flex;
     border: 2px solid var(--lightest);
     font-size: 16px;
     border-radius: 4px;
     width: 100%;
     margin-top: 6px;
-    padding: 8px;
+    flex-grow: 1;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
 }
 
 .hintButton {
